# llm-provider-monitor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  compose.yaml
.github/workflows/: docker-image.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: ee402e18cf63_add_timeout_seconds_to_provider.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  config.py  models.py  probe.py  providers.py  status.py  templates.py
backend/app/checker/: __init__.py  base.py  httpx_checker.py
backend/app/models/: __init__.py  config.py  core.py  status.py
backend/app/scheduler/: __init__.py  probe_scheduler.py
backend/app/schemas/: __init__.py  common.py  config.py  model.py  probe.py  provider.py  status.py  template.py
backend/app/services/: __init__.py  cleanup_service.py  probe_service.py  status_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: config.ts  index.ts  models.ts  probe.ts  providers.ts  status.ts  templates.ts
frontend/src/components/: AdminAuth.tsx  Button.tsx  DashboardFilters.tsx  Header.tsx  HistoryList.tsx  MiniTimeline.tsx  Pagination.tsx  StatusTable.tsx  Timeline.tsx
frontend/src/contexts/: StatusContext.tsx
frontend/src/hooks/: useAuth.tsx  useInterval.ts  usePolling.ts  useResponsive.ts
frontend/src/pages/: Dashboard.tsx  Detail.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
(+6 files in other folders)
